# mtg-card-organizer

./: Cargo.toml  README.md  example.txt  flake.nix
src/: app.rs  main.rs  models.rs  mtg.rs
