[package]
name = "mtg-card-organizer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
fuzzy-matcher = "0.3.7"
iced = { version = "0.12.1", features = ["tokio", "advanced", "image"] }
native-dialog = "0.7.0"
reqwest = { version = "0.12.4", features = ["blocking"] }
rust-fuzzy-search = "0.1.1"
scryfall = "0.16.2"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["v4"] }
